--- a/src/pages/components/toggletip/usage.mdx
+++ b/src/pages/components/toggletip/usage.mdx
@@ -41,18 +41,9 @@ are maintained including focus order and ensuring all functionality is operable
 through a keyboard interface.
 
 <Row>
-<Column
-colMd={6} colLg={6}
-caption="Example of toggletip used as help menu">
+<Column colLg={8}>
 
-![Example of toggletip used as help menu](images/toggle-tip-usage-1a.png)
-
-</Column>
-
-<Column colMd={6} colLg={6}
-caption="Example of toggletip used within a data table">
-
-![Example of toggletip used within a data table](images/toggle-tip-usage-1b.png)
+![Overview of toggletip](images/toggle-tip-usage-1.png)
 
 </Column>
 </Row>
@@ -84,6 +75,12 @@ or `Click` depending on use case.
 </Column>
 </Row>
 
+<Caption>
+  The examples above are patterns. Carbon currently only supports the basic
+  toggletip outlined below. In the future, other toggletip styles will be
+  available.
+</Caption>
+
 ### When to not use
 
 Don't use to present critical information or request required input needed to
@@ -107,8 +104,8 @@ instead.
    interactive, it can visually change its shape and size depending on the use
    case.
 2. **Tip:** An indicator that is added to a popover container to help show the
-   relationship between the popover and where it was triggered from. Toggletips can utilize
-   no tip, caret tip, or tab tip types.
+   relationship between the popover and where it was triggered from. Toggletips
+   can utilize no tip, caret tip, or tab tip types.
 3. **Content area:** Varies based on use case and follows disclosure guidelines.
 4. **Popover container:** Area that contains text and interactive elements.
 
@@ -150,7 +147,8 @@ and tab tip types.
 ### Main elements
 
 Heading, body, and footer content can vary based on your use case. To see
-examples of content used within toggletips, visit the [disclosure pattern](/patterns/disclosures-pattern/).
+examples of content used within toggletips, visit the
+[disclosure pattern](/patterns/disclosures-pattern/).
 
 Interactive tooltips may contain rich text and other interactive elements like
 buttons or links and must remain actively open until a user dismisses the
@@ -173,7 +171,10 @@ scroll horizontally or let content bleed off the page.
 </Column>
 </Row>
 
-<Caption>Example of when to scroll within a toggletip</Caption>
+<Caption>
+  Example of when to scroll within a toggletip. This example is a pattern and is
+  currently not offered as a component.
+</Caption>
 
 ### Further guidance
 
@@ -216,15 +217,16 @@ trigger element has focus.
 
 #### Popover
 
-[Popovers](/components/popover/usage/) are used as a base layer in some of our components like tooltips,
-overflow menus, and dropdown menus. For further guidance, see Carbon’s popover
-component.
+[Popovers](/components/popover/usage/) are used as a base layer in some of our
+components like tooltips, overflow menus, and dropdown menus. For further
+guidance, see Carbon’s popover component.
 
 #### Disclosure
 
-[Disclosures](/patterns/disclosures-pattern/) use popovers as a base layer. Disclosures are comprised of a popover
-container, text, and interactive elements. Interactive elements are kept in the
-tab order of the page. Further guidance on the disclosure pattern coming soon.
+[Disclosures](/patterns/disclosures-pattern/) use popovers as a base layer.
+Disclosures are comprised of a popover container, text, and interactive
+elements. Interactive elements are kept in the tab order of the page. Further
+guidance on the disclosure pattern coming soon.
 
 #### Tooltip
 
