--- a/src/pages/components/progress-bar/usage.mdx
+++ b/src/pages/components/progress-bar/usage.mdx
@@ -398,7 +398,7 @@ visible but the indicator bar's progress stops in place and spans full width.
 <Video src={localVideo4} poster={localPoster4} />
 
 <Caption>
-  The example shows thep progress bar is automatically dismissed once it’s done
+  The example shows the progress bar is automatically dismissed once it’s done
   uploading.
 </Caption>
 
