--- a/src/pages/components/slider/accessibility.mdx
+++ b/src/pages/components/slider/accessibility.mdx
@@ -6,6 +6,9 @@ description:
 tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 ---
 
+ import localVideo from './videos/slider.mp4';
+ import localPoster from './images/slider-accessibility-3.png';
+
 <PageDescription>
 
 No accessibility annotations are needed for sliders, but keep these considerations in mind if you are modifying Carbon or creating a custom component.
@@ -49,6 +52,8 @@ Tab order goes from slider to text input. Arrow keys are used to change the slid
 
 <Row>
 <Column colLg={8}>
+
+<Video src={localVideo} poster={localPoster} />
 
 ![pointer clicks on slider range and input updates to 80. input value changes to 75 and slider repositions to match](images/slider-accessibility-3.png)
 
