feat: add tutorial notification warning

--- a/src/pages/developing/react-tutorial/overview.mdx
+++ b/src/pages/developing/react-tutorial/overview.mdx
@@ -17,6 +17,13 @@ components, while introducing web development best practices along the way.
 
 </PageDescription>
 
+<InlineNotification>
+
+**Note:** The following tutorial instructions are based on our v10 packages and
+have not been updated to reflect changes for our next major version.
+
+</InlineNotification>
+
 <AnchorLinks>
 
 <AnchorLink>Audience</AnchorLink>
