--- a/src/pages/developing/react-tutorial/step-2.mdx
+++ b/src/pages/developing/react-tutorial/step-2.mdx
@@ -17,6 +17,13 @@ Carbon components.
 
 </PageDescription>
 
+<InlineNotification>
+
+**Note:** The following tutorial instructions are based on our v10 packages and
+have not been updated to reflect changes for our next major version.
+
+</InlineNotification>
+
 <AnchorLinks>
 
 <AnchorLink>Fork, clone and branch</AnchorLink>
