--- a/src/pages/components/slider/accessibility.mdx
+++ b/src/pages/components/slider/accessibility.mdx
@@ -53,9 +53,7 @@ Tab order goes from slider to text input. Arrow keys are used to change the slid
 <Row>
 <Column colLg={8}>
 
-<Video src={localVideo} poster={localPoster} />
-
-![pointer clicks on slider range and input updates to 80. input value changes to 75 and slider repositions to match](images/slider-accessibility-3.png)
+<Video src={localVideo} poster={localPoster} aria-label="pointer clicks on slider range and input updates to 80. input value changes to 75 and slider repositions to match"/>
 
 <Caption>The input value and slider position are in sync. An update to either causes the other to update.</Caption>
 
