--- a/src/pages/components/breadcrumb/accessibility.mdx
+++ b/src/pages/components/breadcrumb/accessibility.mdx
@@ -30,7 +30,7 @@ Each page link in the breadcrumb is reached by `Tab` and activated by `Enter`. T
 
 ![example of breadcrumb keyboard interaction](images/breadcrumb-accessibility-1.png)
 
-<Caption>The breadcrumb's links are reached by `Tab` and activated by `Enter`.</Caption>
+<Caption>The breadcrumb's links are reached by Tab and activated by Enter.</Caption>
 
 </Column>
 </Row>
