--- a/src/pages/components/tag/style.mdx
+++ b/src/pages/components/tag/style.mdx
@@ -68,16 +68,16 @@ with no spaces.
 All tags have the same height. However, the width of tags varies based on the
 amount of content. All four corners of a tag are rounded with a 24px radius.
 
-| Element   | Property                    | px / rem   | Spacing token |
-| --------- | --------------------------- | ---------- | ------------- |
-| Big tag   | height                      | 24 / 1.5   | –             |
-|           | radius                      | 12px       | –             |
-|           | margin                      | 8 / 0.5    | `$spacing-03` |
-|           | padding-left, padding-right | 8 / 0.5    | `$spacing-03` |
-| Small tag | height                      | 18 / 1.125 | –             |
-|           | radius                      | 9px        | –             |
-|           | margin                      | 8 / 0.5    | `$spacing-03` |
-|           | padding-left, padding-right | 8 / 0.5    | `$spacing-03` |
+| Element  | Property                    | px / rem   | Spacing token |
+| -------- | --------------------------- | ---------- | ------------- |
+| Tag (md) | height                      | 24 / 1.5   | –             |
+|          | radius                      | 12px       | –             |
+|          | margin                      | 8 / 0.5    | `$spacing-03` |
+|          | padding-left, padding-right | 8 / 0.5    | `$spacing-03` |
+| Tag (sm) | height                      | 18 / 1.125 | –             |
+|          | radius                      | 9px        | –             |
+|          | margin                      | 8 / 0.5    | `$spacing-03` |
+|          | padding-left, padding-right | 8 / 0.5    | `$spacing-03` |
 
 <div className="image--fixed">
 
@@ -89,10 +89,10 @@ amount of content. All four corners of a tag are rounded with a 24px radius.
 
 ## Sizes
 
-| Size  | Height px / rem |
-| ----- | --------------- |
-| Small | 18px / 1.125    |
-| Big   | 24 / 1.5        |
+| Size   | Height px / rem |
+| ------ | --------------- |
+| Small  | 18px / 1.125    |
+| Medium | 24 / 1.5        |
 
 <div className="image--fixed">
 
