chore(links): update github links to point to v10 branch

--- a/src/pages/developing/react-tutorial/step-2.mdx
+++ b/src/pages/developing/react-tutorial/step-2.mdx
@@ -95,7 +95,7 @@ You should see something similar to where the
 
 Before we get started with this step, we'll be adding some components that
 require IE11 polyfills. As shown in the
-[Carbon React documentation](https://github.com/carbon-design-system/carbon/blob/main/packages/react/.storybook/polyfills.js),
+[Carbon React documentation](https://github.com/carbon-design-system/carbon/blob/v10/packages/react/.storybook/polyfills.js),
 go ahead and add these imports to the top of the root `index.js`. They aren't
 all needed, but we'll add them all to play it safe for the duration of the
 tutorial.
@@ -260,8 +260,8 @@ import {
 
 Before we can render the tabs, we need to add some props for the component after
 the import. These example props came from the
-[React Tabs Story](https://react.carbondesignsystem.com/?path=/story/components-tabs--default) in
-Storybook.
+[React Tabs Story](https://react.carbondesignsystem.com/?path=/story/components-tabs--default)
+in Storybook.
 
 ```javascript path=src/content/LandingPage/LandingPage.js
 const props = {
