--- a/src/pages/guidelines/2x-grid/overview.mdx
+++ b/src/pages/guidelines/2x-grid/overview.mdx
@@ -41,7 +41,7 @@ creative decision-making.
 <Column colLg={4} colMd={4}  noGutterSm>
   <ResourceCard
     subTitle="Elements package: Grid"
-    href="https://github.com/carbon-design-system/carbon/tree/main/packages/grid"
+    href="https://github.com/carbon-design-system/carbon/tree/v10/packages/grid"
     >
 
 <MdxIcon name="github" />
@@ -108,16 +108,16 @@ fluid grid, or by tiling fixed boxes in multiples.
 
 #### Fluid grid
 
-A fluid grid divides space by twos. This division is immediately
-evident in the 2x column structure. Within a breakpoint, the column count is
-constant, and unit size scales with screen size. Choose a column count by
-starting with one, then divide by two as needed.
+A fluid grid divides space by twos. This division is immediately evident in the
+2x column structure. Within a breakpoint, the column count is constant, and unit
+size scales with screen size. Choose a column count by starting with one, then
+divide by two as needed.
 
 #### Fixed grid
 
-A fixed grid starts with a fixed unit size from the sizing scale,
-then tiles and wraps as needed, like text. To employ the 2x concept, multiply
-box sizes by two and mix them together.
+A fixed grid starts with a fixed unit size from the sizing scale, then tiles and
+wraps as needed, like text. To employ the 2x concept, multiply box sizes by two
+and mix them together.
 
 When tiling fixed boxes, the column count is not known in advance, but a grid
 emerges visually due to the use of a consistent sizing scale. On breakpoint
@@ -181,7 +181,7 @@ breakpoints.
 
 Create custom breakpoints to accommodate special needs, by writing your own
 media queries and CSS rules. Refer to the
-[grid code package](https://github.com/carbon-design-system/carbon/tree/main/packages/grid)
+[grid code package](https://github.com/carbon-design-system/carbon/tree/v10/packages/grid)
 for more information.
 
 | Breakpoint | Value (px/rem) | Columns | Size (%) | Size  | Padding | Margin |
