--- a/src/pages/developing/react-tutorial/step-1.mdx
+++ b/src/pages/developing/react-tutorial/step-1.mdx
@@ -79,6 +79,7 @@ git remote add upstream git@github.com:carbon-design-system/carbon-tutorial.git
 ```
 
 #### HTTPS
+
 ```bash
 git remote add upstream https://github.com/carbon-design-system/carbon-tutorial.git
 ```
@@ -302,7 +303,8 @@ const TutorialHeader = () => (
         <SideNav
           aria-label="Side navigation"
           expanded={isSideNavExpanded}
-          isPersistent={false}>
+          isPersistent={false}
+        >
           <SideNavItems>
             <HeaderSideNavItems>
               <HeaderMenuItem href="/repos">Repositories</HeaderMenuItem>
@@ -322,7 +324,7 @@ export default TutorialHeader;
 
 **Note:** you can find a description of the different components used UI Shell
 in our
-[carbon-components-react](https://github.com/carbon-design-system/carbon/tree/main/packages/react/src/components/UIShell)
+[carbon-components-react](https://github.com/carbon-design-system/carbon/tree/v10/packages/react/src/components/UIShell)
 package.
 
 </InlineNotification>
