--- a/src/pages/guidelines/spacing/code.mdx
+++ b/src/pages/guidelines/spacing/code.mdx
@@ -68,7 +68,8 @@ the following:
 
 #### API
 
-<br />| Export | Description | !default | | :------------------ | :---------- | :-------
+<br />
+| Export | Description | !default | | :------------------ | :---------- | :-------
 | | `$spacing-01` | | ✅ | | `$spacing-02` | | ✅ | | `$spacing-03` | | ✅ | | `$spacing-04`
 | | ✅ | | `$spacing-05` | | ✅ | | `$spacing-06` | | ✅ | | `$spacing-07` | | ✅
 | | `$spacing-08` | | ✅ | | `$spacing-09` | | ✅ | | `$spacing-10` | | ✅ | | `$spacing-11`
