--- a/src/pages/components/tabs/code.mdx
+++ b/src/pages/components/tabs/code.mdx
@@ -81,36 +81,75 @@ documentation, see the Storybooks for each framework below.
         'https://web-components.carbondesignsystem.com/?path=/story/components-tabs--default',
     }}
   >{`
-<div style={{ width: '50%' }}>
-  <Tabs scrollIntoView={false}>
-    <Tab
-      href="#"
-      id="tab-1"
-      label="Tab label 1"
-    >
-      <div className="some-content">
-        Content for first tab goes here.
-      </div>
-    </Tab>
-    <Tab
-      href="#"
-      id="tab-2"
-      label="Tab label 2"
-    >
-      <div className="some-content">
-        Content for second tab goes here.
-      </div>
-    </Tab>
-    <Tab
-      href="#"
-      id="tab-3"
-      label='Tab label 3'
-    >
-      <div className="some-content">
-        Content for third tab goes here.
-      </div>
-    </Tab>
-  </Tabs>
-</div>
+        <div style={{ width: '50%' }}>
+          <Tabs>
+            <TabList>
+              <Tab id="tab-1">
+                Tab label 1"
+              </Tab>
+              <Tab id="tab-2">
+                Tab label 2
+              </Tab>
+              <Tab id="tab-3">
+                Tab label 3
+              </Tab>
+            </TabList>
+            <TabPanels>
+              <TabPanel>Content for tab 1</TabPanel>
+              <TabPanel>Content for tab 2</TabPanel>
+              <TabPanel>Content for tab 3</TabPanel>
+            </TabPanels>
+          </Tabs>
+        </div>
   `}</ComponentVariant>
 </ComponentDemo>
+
+## V11
+
+Tabs got a big revamp in v11! Tabs are now more composable than ever before,
+meaning that you have the flexibity and control on your end to make them look
+and act how you want.
+
+Example of Tabs in v10:
+
+```js
+<Tabs>
+  <Tab label="Tab label 1">
+    <p>Content for first tab goes here.</p>
+  </Tab>
+  <Tab label="Tab label 2">
+    <p>Content for second tab goes here.</p>
+  </Tab>
+  <Tab label="Tab label 3" disabled>
+    <p>Content for third tab goes here.</p>
+  </Tab>
+  <Tab
+    label="Tab label 4 shows truncation"
+    title="Tab label 4 shows truncation"
+  >
+    <p>Content for fourth tab goes here.</p>
+  </Tab>
+</Tabs>
+```
+
+Those same Tabs, now in v11:
+
+```js
+<Tabs>
+  <TabList>
+    <Tab>Tab Label 1</Tab>
+    <Tab>Tab Label 2</Tab>
+    <Tab disabled>Tab Label 3</Tab>
+    <Tab title="Tab Label 4 shows truncation">Tab Label 4 shows truncation</Tab>
+  </TabList>
+  <TabPanels>
+    <TabPanel>Content for first tab goes here.</TabPanel>
+    <TabPanel>Content for second tab goes here.</TabPanel>
+    <TabPanel>Content for third tab goes here.</TabPanel>
+    <TabPanel>Content for fourth tab goes here.</TabPanel>
+  </TabPanels>
+</Tabs>
+```
+
+For more details about the changes to Tabs, see our storybook documentation
+[here](https://react.carbondesignsystem.com/?path=/docs/components-tabs--default).
