--- a/src/pages/components/tabs/usage.mdx
+++ b/src/pages/components/tabs/usage.mdx
@@ -96,7 +96,7 @@ such as modals, cards, or side panels.
 >
   <ComponentVariant
     id="tabs"
-    knobs={{ Tabs: ['type'], Tab: ['disabled', 'selected'] }}
+    knobs={{ Tabs: ['type'] }}
     links={{
       React:
         'https://react.carbondesignsystem.com/?path=/story/components-tabs--default',
@@ -108,37 +108,26 @@ such as modals, cards, or side panels.
         'https://web-components.carbondesignsystem.com/?path=/story/components-tabs--default',
     }}
   >{`
-<div style={{ width: '50%' }}>
-  <Tabs scrollIntoView={false}>
-    <Tab
-      href="#"
-      id="tab-1"
-      label="Tab label 1"
-    >
-      <div className="some-content">
-        Content for first tab goes here.
-      </div>
-    </Tab>
-    <Tab
-      href="#"
-      id="tab-2"
-      label="Tab label 2"
-    >
-      <div className="some-content">
-        Content for second tab goes here.
-      </div>
-    </Tab>
-    <Tab
-      href="#"
-      id="tab-3"
-      label='Tab label 3'
-    >
-      <div className="some-content">
-        Content for third tab goes here.
-      </div>
-    </Tab>
-  </Tabs>
-</div>
+        <div style={{ width: '50%' }}>
+          <Tabs>
+            <TabList>
+              <Tab id="tab-1">
+                Tab label 1"
+              </Tab>
+              <Tab id="tab-2">
+                Tab label 2
+              </Tab>
+              <Tab id="tab-3">
+                Tab label 3
+              </Tab>
+            </TabList>
+            <TabPanels>
+              <TabPanel>Content for tab 1</TabPanel>
+              <TabPanel>Content for tab 2</TabPanel>
+              <TabPanel>Content for tab 3</TabPanel>
+            </TabPanels>
+          </Tabs>
+        </div>
   `}</ComponentVariant>
 </ComponentDemo>
 
@@ -156,6 +145,7 @@ are always at least two tabs and one is selected by default. Icons are optional.
 
 </Column>
 </Row>
+<Caption>Note: The close icon to the left of the tab is an example of a pattern. It is not currently implemented in the component.</Caption>
 
 <Row>
 <Column colSm={2} colMd={4} colLg={4}>
@@ -187,6 +177,7 @@ B. Indicator <br /> C. Icon
 
 </Column>
 </Row>
+<Caption>Note: The icon to the left of the tab  and the secondary label is an example of a pattern. It is not currently implemented in the component.</Caption>
 
 <Row>
 <Column colSm={2} colMd={4} colLg={4}>
@@ -266,6 +257,9 @@ Use the
 to drive visual rhythm by spacing content in multiples of two columns and
 aligning the beginning and ending of the tab elements with content below the
 tabs when possible.
+
+_Note: This is not currently implemented in the components, updates for
+alignment to the grid are incoming!_
 
 <Row>
 <Column colLg={12}>
@@ -401,6 +395,11 @@ label.
 </Column>
 </Row>
 
+<Caption>
+  Note: Tabs with an icon is an example of a pattern. It is not currently
+  implemented by default in the component.
+</Caption>
+
 ### Icon-only tabs
 
 You may use icon-only tabs with both line and contained tabs. Icons must be
@@ -428,6 +427,7 @@ secondary labels with line tabs or auto-width contained tabs.
 
 </Column>
 </Row>
+<Caption>Note: The secondary label is an example of a pattern. It is not currently implemented in the component.</Caption>
 
 ## Related
 
