--- a/src/pages/components/tabs/code.mdx
+++ b/src/pages/components/tabs/code.mdx
@@ -69,7 +69,7 @@ documentation, see the Storybooks for each framework below.
 >
   <ComponentVariant
     id="tabs"
-    knobs={{ Tabs: ['type'], Tab: ['disabled', 'selected'] }}
+    knobs={{ TabList: ['contained'] }}
     links={{
       React:
         'https://react.carbondesignsystem.com/?path=/story/components-tabs--default',
