--- a/src/pages/components/tabs/usage.mdx
+++ b/src/pages/components/tabs/usage.mdx
@@ -96,7 +96,7 @@ such as modals, cards, or side panels.
 >
   <ComponentVariant
     id="tabs"
-    knobs={{ Tabs: ['type'] }}
+    knobs={{ TabList: ['contained'] }}
     links={{
       React:
         'https://react.carbondesignsystem.com/?path=/story/components-tabs--default',
