Revert "Merge branch 'slider-accessibility' of https://github.com/mbgower/carbon-website into slider-accessibility"
This reverts commit f8cdd9b15502a066cc89b8436606c14b25cf6968, reversing
changes made to da27e1d7c3b941404ce1ae7bba4fe4ca972e2ef2.

--- a/src/pages/components/slider/accessibility.mdx
+++ b/src/pages/components/slider/accessibility.mdx
@@ -6,14 +6,12 @@ description:
 tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 ---
 
-import localVideo from './videos/slider.mp4';
-import localPoster from './images/slider-accessibility-3.png';
+ import localVideo from './videos/slider.mp4';
+ import localPoster from './images/slider-accessibility-3.png';
 
 <PageDescription>
 
-No accessibility annotations are needed for sliders, but keep these
-considerations in mind if you are modifying Carbon or creating a custom
-component.
+No accessibility annotations are needed for sliders, but keep these considerations in mind if you are modifying Carbon or creating a custom component.
 
 </PageDescription>
 
@@ -24,24 +22,18 @@ component.
 
 ## What Carbon provides
 
-Carbon bakes keyboard operation into its components, improving the experience of
-blind users and others who operate via the keyboard. Carbon incorporates many
-other accessibility considerations, some of which are described below.
+Carbon bakes keyboard operation into its components, improving the experience of blind users and others who operate via the keyboard. Carbon incorporates many other accessibility considerations, some of which are described below.
 
 ### Keyboard interactions
 
-Tab order goes from slider to text input. Arrow keys are used to change the
-slider value. `Shift`+arrow changes the slider value by a larger increment (such
-as by 10 instead of 1). Users can also directly enter a value in the input.
+Tab order goes from slider to text input. Arrow keys are used to change the slider value. `Shift`+arrow changes the slider value by a larger increment (such as by 10 instead of 1). Users can also directly enter a value in the input.
 
 <Row>
 <Column colLg={8}>
 
 ![example of slider keyboard interaction](images/slider-accessibility-1.png)
 
-<Caption>
-  Both the slider and input are in the tab order and keyboard operable.
-</Caption>
+<Caption>Both the slider and input are in the tab order and keyboard operable.</Caption>
 
 </Column>
 </Row>
@@ -53,10 +45,7 @@ as by 10 instead of 1). Users can also directly enter a value in the input.
 
 ![slider label is connected to slider control and text input](images/slider-accessibility-2.png)
 
-<Caption>
-  The slider label is programmatically associated with both the slider and
-  input.
-</Caption>
+<Caption>The slider label is programmatically associated with both the slider and input.</Caption>
 
 </Column>
 </Row>
@@ -66,24 +55,15 @@ as by 10 instead of 1). Users can also directly enter a value in the input.
 
 <Video src={localVideo} poster={localPoster} aria-label="pointer clicks on slider range and input updates to 80. input value changes to 75 and slider repositions to match"/>
 
-<Caption>
-  The input value and slider position are in sync. An update to either causes
-  the other to update.
-</Caption>
+<Caption>The input value and slider position are in sync. An update to either causes the other to update.</Caption>
 
 </Column>
 </Row>
 
 ## Development considerations
 
-Keep these considerations in mind if you are modifying Carbon or creating a
-custom component:
+Keep these considerations in mind if you are modifying Carbon or creating a custom component:
 
-- The `step` value determines the change increment when moving the slider,
-  either by pointer or keyboard. A value of `"1"` is recommended.
-- The `stepMultiplier` determines the value change when the keyboard is used to
-  alter the slider by pressing `Shift`+ Arrow key. A tenth of the total range is
-  recommended as a value, such as `"10"` in a 0-100 slider.
-- See the
-  [ARIA authoring practices](https://www.w3.org/TR/wai-aria-practices-1.2/#slider)
-  for more considerations.
+* The `step` value determines the change increment when moving the slider, either by pointer or keyboard. A value of `"1"` is recommended.
+* The `stepMultiplier` determines the value change when the keyboard is used to alter the slider by pressing `Shift`+ Arrow key. A tenth of the total range is recommended as a value, such as `"10"` in a 0-100 slider.
+* See the [ARIA authoring practices](https://www.w3.org/TR/wai-aria-practices-1.2/#slider) for more considerations.
