docs: fix v11 overflow menu audit bugs (#2763)
* update: images

* update: images

* update: content

* add style images

* update style content

* update style token

* update interactive image

* fix image code

* update image

* update states image

* fix image

--- a/src/pages/components/overflow-menu/style.mdx
+++ b/src/pages/components/overflow-menu/style.mdx
@@ -21,25 +21,33 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
   it is placed on.
 </Caption>
 
+<Row>
+<Column colLg={8}>
+
+![An example of an overflow menu](images/overflow-menu-style-1.png)
+
+</Column>
+</Row>
+
 ### Interactive states
 
-| Element              | Property         | Color token            |
-| -------------------- | ---------------- | ---------------------- |
-| Icon button:focus    | border           | `$focus`               |
-| Menu option:focus    | border           | `$focus`               |
-| Icon button:hover    | background-color | `$background-hover`    |
-| Menu option:hover    | background-color | `$layer-hover` \*      |
-|                      | text color       | `$text-primary`        |
-| Danger option:hover  | background-color | `$button-danger-hover` |
-| Menu option:disabled | text color       | `$text-disabled`       |
+| Element              | Property         | Color token              |
+| -------------------- | ---------------- | ------------------------ |
+| Icon button:focus    | border           | `$focus`                 |
+| Menu option:focus    | border           | `$focus`                 |
+| Icon button:hover    | background-color | `$background-hover`      |
+| Menu option:hover    | background-color | `$layer-hover` \*        |
+|                      | text color       | `$text-primary`          |
+| Danger option:hover  | background-color | `$button-danger-primary` |
+| Menu option:disabled | text color       | `$text-disabled`         |
 
-<div className="image--fixed">
+<Row>
+<Column colLg={12}>
 
-![Overflow menu text hover example](images/overflow-menu-style-1.png)
+![Interactive states for overflow menu](images/overflow-menu-style-2.png)
 
-</div>
-
-<Caption>Text and warning hover examples for overflow menu</Caption>
+</Column>
+</Row>
 
 ## Typography
 
@@ -62,9 +70,9 @@ menu. The overflow menu icon can be found in the
 | Menu option | padding-right, padding-left | 16 / 1    | `$spacing-05` |
 | Divider     | border-top                  | 1px       | –             |
 
-<div className="image-fixed">
+<div className="image--fixed">
 
-![Structure and spacing measurements for an overflow menu](images/overflow-menu-style-3.png)
+![Structure and spacing measurements for an overflow menu](images/overflow-menu-style-4.png)
 
 </div>
 
