--- a/src/pages/migrating/guide/develop.mdx
+++ b/src/pages/migrating/guide/develop.mdx
@@ -42,6 +42,7 @@ possible by detailing all of the updates below.
 | Component `className` prop | <Tag type="cyan">Breaking</Tag>       | [CSS Grid](#css-grid-breaking)           | `@carbon/react`                                                                         |
 | Event handlers             | <Tag type="cyan">Breaking</Tag>       | [CSS Grid](#css-grid-breaking)           | `@carbon/react`                                                                         |
 | Notifications              | <Tag type="cyan">Breaking</Tag>       | [Notifications](#notifications-breaking) | `@carbon/react`                                                                         |
+| Tabs                       | <Tag type="cyan">Breaking</Tag>       | [Tabs](#tabs-breaking)                   | `@carbon/react`                                                                         |
 | Tooltip                    | <Tag type="cyan">Breaking</Tag>       | [CSS Grid](#css-grid-breaking)           | `@carbon/react`                                                                         |
 | ContentSwitcher            | <Tag type="cyan">Breaking</Tag>       | [CSS Grid](#css-grid-breaking)           | `@carbon/react`                                                                         |
 | Layer Component            | <Tag type="cyan">Breaking</Tag>       | [Layering](#layer-component-breaking)    | Components using `light` prop                                                           |
@@ -751,3 +752,80 @@ notifications to closed by pressing the `escape` key. For more details, see the
     </ResourceCard>
   </Column>
 </Row>
+
+## Tabs <Tag type="cyan">Breaking</Tag>
+
+Tabs got a big revamp in v11! Tabs are now more composable than ever before,
+meaning that you have the flexibity and control on your end to make them look
+and act how you want.
+
+### How to migrate
+
+Example of Tabs in v10:
+
+```js
+<Tabs>
+  <Tab label="Tab label 1">
+    <p>Content for first tab goes here.</p>
+  </Tab>
+  <Tab label="Tab label 2">
+    <p>Content for second tab goes here.</p>
+  </Tab>
+  <Tab label="Tab label 3" disabled>
+    <p>Content for third tab goes here.</p>
+  </Tab>
+  <Tab
+    label="Tab label 4 shows truncation"
+    title="Tab label 4 shows truncation"
+  >
+    <p>Content for fourth tab goes here.</p>
+  </Tab>
+</Tabs>
+```
+
+Those same Tabs, migrated to v11:
+
+```js
+<Tabs>
+  <TabList>
+    <Tab>Tab Label 1</Tab>
+    <Tab>Tab Label 2</Tab>
+    <Tab disabled>Tab Label 3</Tab>
+    <Tab title="Tab Label 4 shows truncation">Tab Label 4 shows truncation</Tab>
+  </TabList>
+  <TabPanels>
+    <TabPanel>Content for first tab goes here.</TabPanel>
+    <TabPanel>Content for second tab goes here.</TabPanel>
+    <TabPanel>Content for third tab goes here.</TabPanel>
+    <TabPanel>Content for fourth tab goes here.</TabPanel>
+  </TabPanels>
+</Tabs>
+```
+
+### Update `Tabs` and `Tab` usage
+
+All the same functionality for Tabs is available in v11 and more! However, some
+props have been deprecated becuase they have either been renamed or are no
+longer needed. Below are the minor tweaks in naming or implementation.
+
+- the `type` prop is deprecated. Both "container" and "default" tabs still exist
+  but now can be called by adding the prop `contained` to the `TabList`.
+- Default tabs are now referred to as line tabs in our documentation here and in
+  our storybook.
+- `hidden` prop is no longer needed with the new composable Tabs. You have
+  control over tab content and when it is hidden through the `TabPanel` and
+  `TabPanels` components.
+- `selected` prop is now named `selectedIndex`.
+- `tabContentClassName` is no longer needed. `TabPanel` (equivalent to tab
+  content) takes in a className prop on its outermost node.
+- For `Tab`, `label` is no longer needed. `children` of `Tab` are now the label.
+- Due to its composability, `renderAnchor`, `renderButton`, `renderContent` are
+  no longer needed on `Tab`. You now have full control over what is rendered
+  inside of `Tab` and `TabPanel`.
+- Because `renderButton` is no longer needed, the associated `tabIndex` prop has
+  also been deprecated.
+- `selected` on `Tab` is deprecated in favor or `selectedIndex`, now placed on
+  `Tabs` instead.
+
+For more details about the changes to Tabs, see our storybook documentation
+[here](https://react.carbondesignsystem.com/?path=/docs/components-tabs--default).
