--- a/src/pages/guidelines/spacing/overview.mdx
+++ b/src/pages/guidelines/spacing/overview.mdx
@@ -129,7 +129,7 @@ For more information, see the `Stack` component in
 <Row>
 <Column colLg={8}>
 
-![Example of spacing tokens applied with the stack component](images/spacing-stack.png.png)
+![Example of spacing tokens applied with the stack component](images/spacing-stack.png)
 
 <Caption>Example of spacing tokens applied with the stack component</Caption>
 
