update the code for the progress bar
`aria-describedby="[progressbar-id]"` instead

--- a/src/pages/components/progress-bar/usage.mdx
+++ b/src/pages/components/progress-bar/usage.mdx
@@ -461,7 +461,7 @@ to right) when enough information is gathered to end the load animation.
   reader users.
 
 - If the progress bar shows the loading of a specific part or region of the
-  application, set `aria-busy="true"` and `aria-describedly="[progressbar-id]"`
+  application, set `aria-busy="true"` and `aria-describedby="[progressbar-id]"`
   on the related element to ensure assistive technologies can correctly convey
   this relation to the user.
 
