docs(migration): revert incorrect package name changes

--- a/src/pages/developing/frameworks/react.mdx
+++ b/src/pages/developing/frameworks/react.mdx
@@ -60,7 +60,7 @@ behavior in prototype and production work.
 <Title> Using npm: </Title>
 
 ```bash
-npm install --save @carbon/react carbon-components carbon-icons
+npm install --save @carbon/react
 ```
 
 <Title>
@@ -68,7 +68,7 @@ npm install --save @carbon/react carbon-components carbon-icons
 </Title>
 
 ```bash
-yarn add @carbon/react carbon-components carbon-icons
+yarn add @carbon/react
 ```
 
 ## Getting started
