--- a/src/pages/help/faq/index.mdx
+++ b/src/pages/help/faq/index.mdx
@@ -31,8 +31,7 @@ Carbon has a core team of designers and front-end developers dedicated to
 developing and supporting the system. There are also countless other designers
 and developers who contribute back to
 [carbon-components](https://github.com/carbon-design-system/carbon-components#contributors)
-and
-[carbon-react](https://github.com/carbon-design-system/@carbon/react#contributors).
+and [carbon-react](https://github.com/carbon-design-system/carbon#contributors).
 
 ## Contributing
 
